--- a/Templates/AppSource App/.github/workflows/TroubleShooting.yaml
+++ b/Templates/AppSource App/.github/workflows/TroubleShooting.yaml
@@ -22,7 +22,7 @@ env:
 
 jobs:
   Troubleshooting:
-    name: Troubleshoot using microsoft/AL-Go-Actions/TroubleShooting@main
+    name: microsoft/AL-Go-Actions/TroubleShooting@main
     if: github.event.inputs.useLatestTroubleshooting == 'false'
     runs-on: [ ubuntu-latest ]
     steps:
@@ -38,7 +38,7 @@ jobs:
           gitHubSecrets: ${{ toJson(secrets) }}
 
   LatestTroubleshooting: 
-    name: Troubleshoot using microsoft/AL-Go/Actions/TroubleShooting@main
+    name: microsoft/AL-Go/Actions/TroubleShooting@main
     if: github.event.inputs.useLatestTroubleshooting == 'true'
     runs-on: [ ubuntu-latest ]
     steps:
