--- a/Templates/Per Tenant Extension/.github/workflows/TroubleShooting.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/TroubleShooting.yaml
@@ -14,7 +14,7 @@ permissions:
 
 defaults:
   run:
-    shell: pwsh
+    shell: powershell
 
 env:
   ALGoOrgSettings: ${{ vars.ALGoOrgSettings }}
@@ -24,7 +24,7 @@ jobs:
   Troubleshooting:
     name: microsoft/AL-Go-Actions/TroubleShooting@main
     if: github.event.inputs.useLatestTroubleshooting == 'false'
-    runs-on: [ ubuntu-latest ]
+    runs-on: [ windows-latest ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -34,13 +34,13 @@ jobs:
       - name: Troubleshooting
         uses: microsoft/AL-Go-Actions/TroubleShooting@main
         with:
-          shell: pwsh
+          shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
 
   LatestTroubleshooting: 
     name: microsoft/AL-Go/Actions/TroubleShooting@main
     if: github.event.inputs.useLatestTroubleshooting == 'true'
-    runs-on: [ ubuntu-latest ]
+    runs-on: [ windows-latest ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -50,5 +50,5 @@ jobs:
       - name: Troubleshooting
         uses: microsoft/AL-Go/Actions/TroubleShooting@main
         with:
-          shell: pwsh
+          shell: powershell
           gitHubSecrets: ${{ toJson(secrets) }}
