--- a/Templates/Per Tenant Extension/.github/workflows/PullRequestHandler.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/PullRequestHandler.yaml
@@ -81,7 +81,7 @@ jobs:
 
       - name: Determine Baseline Workflow Run
         id: DetermineBaselineWorkflowRun
-        if: ${{ steps.determineProjectsToBuild.outputs.IsPartialBuild - eq 'True' }}
+        if: ${{ steps.determineProjectsToBuild.outputs.IsPartialBuild == 'True' }}
         uses: microsoft/AL-Go-Actions/DetermineBaselineWorkflowRun@main
         with:
           shell: powershell
