--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -123,4 +123,28 @@ jobs:
           $releaseNotes = (Get-Content -Encoding utf8 -Path $releaseNotesFile) -join "`n"
           $lastVersion = $releaseNotes.indexof("`n## ")
           $releaseNotes = $releaseNotes.Substring(0, $lastVersion)
-          Write-Host $releaseNotes
+          Add-Content -encoding UTF8 -Path $ENV:GITHUB_ENV -Value "ReleaseNotes=([Uri]::EscapeDataString($releaseNotes))"
+
+      - name: Create release
+        uses: actions/github-script@v7
+        id: createrelease
+        env:
+          branch: ${{ github.event.inputs.branch }}
+          bodyMD: ${{ env:ReleaseNotes }}
+        with:
+          github-token: ${{ secrets.OrgPAT }}
+          script: |
+            var bodyMD = process.env.bodyMD
+            const createReleaseResponse = await github.rest.repos.createRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag_name: '${{ env.branch }}',
+              name: '${{ env.branch }}',
+              body: decodeURIComponent(bodyMD),
+              draft: false,
+              prerelease: false
+            });
+            const {
+              data: { id: releaseId, html_url: htmlUrl, upload_url: uploadUrl }
+            } = createReleaseResponse;
+            core.setOutput('releaseId', releaseId);
