--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -18,6 +18,11 @@ on:
         description: Push directly to the target branch. If not set, a PR will be created.
         required: false
         default: false
+      createRelease:
+        type: boolean
+        description: Create a release in this repository
+        required: false
+        default: true
       defaultBcContainerHelperVersion:
         description: 'Which version of BcContainerHelper to use? (latest, preview, private, a specific version number or a direct download URL like https://github.com/freddydk/navcontainerhelper/archive/master.zip). Leave empty to use latest (or preview for preview branches)'
         required: false
@@ -126,11 +131,12 @@ jobs:
           Add-Content -encoding UTF8 -Path $ENV:GITHUB_ENV -Value "ReleaseNotes=([Uri]::EscapeDataString($releaseNotes))"
 
       - name: Create release
+        if: github.repository_owner == 'freddydk' && github.event.inputs.createRelease
         uses: actions/github-script@v7
         id: createrelease
         env:
           branch: ${{ github.event.inputs.branch }}
-          bodyMD: ${{ env:ReleaseNotes }}
+          bodyMD: ${{ env.ReleaseNotes }}
         with:
           github-token: ${{ secrets.OrgPAT }}
           script: |
