--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -33,7 +33,7 @@ defaults:
     shell: pwsh
 
 jobs:
-  Checks:
+  CheckEndToEnd:
     runs-on: [ ubuntu-latest ]
     steps:
       - name: Check successful end 2 end tests have run
@@ -130,8 +130,8 @@ jobs:
           $releaseNotes = $releaseNotes.Substring(0, $lastVersion)
           Write-Host $env:GITHUB_ENV
           Write-Host "Release Notes: $releaseNotes"
-          Write-Host "Release Notes: ([Uri]::EscapeDataString($releaseNotes))"
-          Add-Content -encoding UTF8 -Path $env:GITHUB_ENV -Value "ReleaseNotes=([Uri]::EscapeDataString($releaseNotes))"
+          Write-Host "Release Notes: $([Uri]::EscapeDataString($releaseNotes))"
+          Add-Content -encoding UTF8 -Path $env:GITHUB_ENV -Value "ReleaseNotes=$([Uri]::EscapeDataString($releaseNotes))"
 
       - name: Create release
         if: github.repository_owner == 'freddydk' && github.event.inputs.createRelease
