--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -7,7 +7,7 @@ on:
     workflows: ['E2E']
     types: [completed]
     branches:
-      - 'main'
+      - 'Release'
   workflow_dispatch:
     inputs:
       branch:
@@ -38,6 +38,14 @@ on:
         required: false
         default: ''
         
+permissions:
+  contents: write
+  actions: read
+
+concurrency:
+  group: 'deploy'
+  cancel-in-progress: true
+
 defaults:
   run:
     shell: pwsh
@@ -83,7 +91,7 @@ jobs:
     needs: [ Inputs ]
     steps:
       - name: Check successful end 2 end tests have run
-        if: github.repository_owner == 'microsoft' && needs.Inputs.outputs.requireEndToEndTests == 'true'
+        if: github.repository_owner == 'freddydk' && needs.Inputs.outputs.requireEndToEndTests == 'true'
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
@@ -107,7 +115,7 @@ jobs:
     environment: Production
     steps:
       - name: Validate Deployment
-        if: github.repository_owner == 'microsoft'
+        if: github.repository_owner == 'freddydk'
         env:
           GH_TOKEN: ${{ github.token }}
           branch: ${{ needs.Inputs.outputs.branch }}
@@ -165,7 +173,7 @@ jobs:
           }
 
       - name: Calculate Release Notes
-        if: github.repository_owner == 'microsoft' && needs.Inputs.outputs.createRelease == 'true'
+        if: github.repository_owner == 'freddydk' && needs.Inputs.outputs.createRelease == 'true'
         run: |
           $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
           $releaseNotesFile = Join-Path $env:GITHUB_WORKSPACE "RELEASENOTES.md"
@@ -175,14 +183,14 @@ jobs:
           Add-Content -encoding UTF8 -Path $env:GITHUB_ENV -Value "ReleaseNotes=$([Uri]::EscapeDataString($releaseNotes))"
 
       - name: Create release
-        if: github.repository_owner == 'microsoft' && needs.Inputs.outputs.createRelease == 'true'
+        if: github.repository_owner == 'freddydk' && needs.Inputs.outputs.createRelease == 'true'
         uses: actions/github-script@v7
         id: createrelease
         env:
           branch: ${{ needs.Inputs.outputs.branch }}
           bodyMD: ${{ env.ReleaseNotes }}
         with:
-          github-token: ${{ secrets.OrgPAT }}
+          github-token: ${{ github.token }}
           script: |
             var bodyMD = process.env.bodyMD
             const createReleaseResponse = await github.rest.repos.createRelease({
