--- a/.github/workflows/Deploy.yaml
+++ b/.github/workflows/Deploy.yaml
@@ -4,7 +4,7 @@ run-name: "Deploy from [${{ github.ref_name }}] to [${{ inputs.branch }}]"
 
 on:
   workflow_run:
-    workflows: ['E2E']
+    workflows: ['End to end tests']
     types: [completed]
     branches:
       - 'Release'
